[tool.poetry]
name = "pycrastinate"
version = "0.1.0"
description = "A python framework to build and lazyly evaluate task graphs."
authors = ["Till Speicher <till.speicher@gmx.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
